// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error message can be the return of a function 1`] = `
Array [
  Object {
    "msg": "keep trying",
    "nestedErrors": Array [
      Array [
        Object {
          "location": "body",
          "msg": "Invalid value",
          "path": "foo",
          "value": true,
        },
      ],
    ],
    "path": "_error",
  },
]
`;

exports[`should let the user to choose between multiple error types flat error type 1`] = `
Array [
  Object {
    "msg": "Invalid value(s)",
    "nestedErrors": Array [
      Object {
        "location": "body",
        "msg": "Invalid value",
        "path": "foo",
        "value": true,
      },
      Object {
        "location": "body",
        "msg": "Invalid value",
        "path": "bar",
        "value": undefined,
      },
    ],
    "path": "_error",
  },
]
`;

exports[`should let the user to choose between multiple error types grouped error type 1`] = `
Array [
  Object {
    "msg": "Invalid value(s)",
    "nestedErrors": Array [
      Array [
        Object {
          "location": "body",
          "msg": "Invalid value",
          "path": "foo",
          "value": true,
        },
      ],
      Array [
        Object {
          "location": "body",
          "msg": "Invalid value",
          "path": "bar",
          "value": undefined,
        },
      ],
    ],
    "path": "_error",
  },
]
`;

exports[`should let the user to choose between multiple error types leastErroredOnly error type 1`] = `
Array [
  Object {
    "msg": "Invalid value(s)",
    "nestedErrors": Array [
      Object {
        "location": "body",
        "msg": "Invalid value",
        "path": "foo",
        "value": true,
      },
    ],
    "path": "_error",
  },
]
`;

exports[`with a list of chain groups sets a single error for the _error key 1`] = `
Array [
  Object {
    "msg": "Invalid value(s)",
    "nestedErrors": Array [
      Array [
        Object {
          "location": "cookies",
          "msg": "Invalid value",
          "path": "foo",
          "value": true,
        },
        Object {
          "location": "cookies",
          "msg": "Invalid value",
          "path": "bar",
          "value": "def",
        },
      ],
      Array [
        Object {
          "location": "cookies",
          "msg": "Invalid value",
          "path": "baz",
          "value": 123,
        },
      ],
    ],
    "path": "_error",
  },
]
`;

exports[`with a list of chains sets a single error for the _error key 1`] = `
Array [
  Object {
    "msg": "Invalid value(s)",
    "nestedErrors": Array [
      Array [
        Object {
          "location": "cookies",
          "msg": "Invalid value",
          "path": "foo",
          "value": true,
        },
      ],
      Array [
        Object {
          "location": "cookies",
          "msg": "Invalid value",
          "path": "bar",
          "value": "def",
        },
      ],
    ],
    "path": "_error",
  },
]
`;
